Make images full-width to prevent layout shifts
Images with fit-content sizing are thumbnail-sized while loading. Full width and aspect radio ensure they immediately occupy the area they need.

--- a/packages/css/src/components/image/image.scss
+++ b/packages/css/src/components/image/image.scss
@@ -7,7 +7,7 @@
   aspect-ratio: var(--ams-image-aspect-ratio);
   block-size: auto; /* [1] */
   font-style: italic; /* [3] */
-  inline-size: fit-content;
+  inline-size: 100%;
   max-inline-size: 100%; /* [1] */
   object-fit: cover; /* [4] */
   vertical-align: middle; /* [2] */
